# sqlalchemy-continuum

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CLAUDE.md  CONTRIBUTING.md  README.rst  RELEASE.md  benchmark.py  constraints-sqlalchemy14.txt  pyproject.toml  tox.ini  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: docs.yml  main.yml  publish.yml
docs/: alembic.md  api.md  changelog.md  configuration.md  configuration.rst  index.md  index.rst  intro.md  license.md  native_versioning.md  plugins.md  queries.md  queries.rst  revert.md  schema.md  sqlmodel.md  transactions.md  utilities.md  version_objects.md
sqlalchemy_continuum/: __init__.py  _compat.py  builder.py  fetcher.py  manager.py  model_builder.py  operation.py  relationship_builder.py  table_builder.py  transaction.py  unit_of_work.py  utils.py  version.py
sqlalchemy_continuum/dialects/: postgresql.py
sqlalchemy_continuum/plugins/: activity.py  base.py  flask.py  property_mod_tracker.py  transaction_changes.py  transaction_meta.py
tests/: __init__.py  test_compatibility.py  test_efficient_queries.py  test_identity_column.py  test_revert.py  test_sessions.py  test_thread_safe_uow_multithreaded.py  test_thread_safe_uow_storage.py  test_user_guide_examples.py  test_validity_strategy.py
tests/sqlmodel/: __init__.py  test_delete.py  test_insert.py  test_revert.py  test_transaction.py  test_update.py  test_versions.py
tests/sqlmodel/relationships/: test_many_to_many_relations.py  test_non_versioned_classes.py  test_one_to_one_relations.py
tests/utils/: test_changeset.py
