[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SQLAlchemy-Continuum"
version = "1.7.0"
description = "Versioning and auditing extension for SQLAlchemy."
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    {name = "Konsta Vesterinen", email = "konsta@fastmonkeys.com"},
    {name = "Mark Steward"},
    {name = "Jose Soto"}
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "SQLAlchemy>=1.4.53,<2.1"
]

# Extras are user-facing features only; development dependencies live in
# [dependency-groups] below (PEP 735) so they don't leak into the published
# package metadata.
[project.optional-dependencies]
flask = ["Flask>=2.0"]
flask-login = ["Flask-Login>=0.6"]
flask-sqlalchemy = ["Flask-SQLAlchemy>=3.0"]
sqlmodel = ['SQLModel>=0.0.24']

[project.urls]
Homepage = "https://github.com/sqlalchemy-continuum/sqlalchemy-continuum"
Documentation = "https://sqlalchemy-continuum.github.io/"
Changelog = "https://github.com/sqlalchemy-continuum/sqlalchemy-continuum/blob/main/CHANGES.rst"

[tool.setuptools.packages.find]
include = ["sqlalchemy_continuum*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T10", # flake8-debugger (breakpoint()/pdb left in code)
]
ignore = [
    "E501",  # line too long, handled by ruff format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/test_*.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_continuum"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
test = [
    "pytest>=7.0",
    "psycopg2>=2.9",
    "PyMySQL>=1.0",
    "Flask>=2.0",
    "Flask-Login>=0.6",
    "Flask-SQLAlchemy>=3.0",
    "packaging",
]
docs = [
    "zensical>=0.0.46",
    "mkdocstrings-python>=1.16",
]
lint = [
    "ruff>=0.15",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "lint" },
    "tox>=4.27",
    "pre-commit>=4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
